<resources>
    <string name="app_name">에이치디메디_C조</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="자가_진단_전_안내사항을_확인해주세요">자가 진단 전, \n안내사항을 확인해주세요.</string>
    <string name="diagnosisResult_title">ADHD일 가능성이 있습니다.</string>
    <string name="본_진단은_간이진단으로_">본 진단은 간이진단으로, 추후 정확한 진단을 위해서는 병원을 방문해주세요.</string>
    <string name="본_진단은_만_4_13_">본 진단은 만 4~13세의 자녀를 둔 양육자를 대상으로 합니다.</string>
    <string name="보다_객관적인_진단을_위해_솔직하게_">보다 객관적인 진단을 위해 솔직하게 응답해주세요.</string>
    <string name="시작하기">시작하기</string>
    <string name="매우_그래요">매우 그래요</string>
    <string name="대체로_그래요">대체로 그래요</string>
    <string name="가끔_그래요">가끔 그래요</string>
    <string name="거의_그러지_않아요">거의 그러지 않아요</string>
    <string name="진단_마치기">진단 마치기</string>
    <string name="취소">취소</string>
    <string name="확인">확인</string>
    <string name="자가진단을_종료하시겠습니까_">자가진단을 종료하시겠습니까?</string>
    <string name="기록된_사항은_저장되지_않아요">기록된 사항은 저장되지 않아요.</string>
    <string name="지도_바로가기">지도 바로가기</string>

    <string name="diagnosisResult">진단 결과</string>
    <string name="recommend">추천 정보</string>
    <string name="resulta1">주의단계로, \n전문가의 진단이 필요합니다.</string>
    <string name="resulta2">안전단계로, \nADHD일 가능성이 낮습니다.</string>

    <string name="totalscore">/54점</string>
    <string name="totalscorebelow">18점 이하: 안전/ 19점 이상: 주의</string>
    <string name="uncareful_score">부주의 점수</string>
    <string name="activity_score">과잉활동∙충동성 점수</string>
    <string name="bannerTitle">ADHD 약, 부작용을 확인하고 관리하세요</string>
    <string name="bannerContent">아이약 알아보기</string>
    <string name="resultdetail1">ADHD가 의심되면, 미루지 않고 전문가의 진단과 치료를 받는 것이 좋습니다. 소아 ADHD의 50~60%는 성인까지 지속될 수 있다고 해요.\n이로 인해 주의 집중력이 저하될 경우, 학업에 지장이 발생할 수 있고, 충동성이 높다면 대인관계의 어려움으로 이어질 수 있어요. 이로 인해 부정적인 자아상과 우울감이 누적될 수 있기에, 적절한 시기의 치료가 필요해요.</string>
    <string name="resultdetail2">아동 ADHD,\n빨리 발견하고 치료할수록 좋아요</string>
    <string name="resultdetail3">정확한 판단을 원한다면, 전문 기관의 추가 검사 및 전문가와의 상담을 받아보세요. 또한 아동 청소년은 성장기에 언제든 급격한 변화를 보일 수 있으므로 늘 자녀에게 많은 관심을 기울여주세요.</string>
    <string name="store">저장하기</string>
    <string name="retry">다시하기</string>
    <string name="common">자주 묻는 질문</string>
    <string name="howto1">어떻게 검사하나요?</string>
    <string name="howto11">정확한 진단을 위해 부모님, 선생님, 주변 사람들로부터 얻은 다양한 정보를 통합해 기능상의 문제점을 알아보고 소아정신건강의학과 전문의가 진찰해 아이의 행동, 대인관계, 문제 해결능력, 정서반응 등을 관찰하여 종합적인 진단을 내리게 됩니다.</string>
    <string name="howto2">어떻게 치료하나요?</string>
    <string name="howto22">ADHD의 치료 방법 중 약물치료가 가장 효과적인 방법으로 알려져 있어요. 중추신경자극제인 메틸 페니데이트가 치료에 우수한 효과를 보이는데, ADHD 환자의 70~85%에서 과잉행동이 감소하고, 주의집중력을 증가시켜 학업을 개선시키는 효과가 있습니다.\n\n약물치료와 함께 인지 행동 치료, 환경 조절, 부모 상담을 병행하는 것이 효과적이에요. 이 밖에 사회 기술 훈련, 정신·놀이치료, 뉴로 피드백 등의 방법도 함께 사용해요.</string>
    <string name="howto3">ADHD 약물 치료, 부작용은 없나요?</string>
    <string name="howto33">식욕부진, 구역, 수면장애 등의 부작용이 나타날 가능성이 있어요. 적응기간이 지나면 이러한 반응은 대부분 점차 사라지지만, 이러한 상황이 지속된다면 약물 교체 또는 용량 조절을 통해 충분히 부작용을 극복하고 경감할 수 있어요.\n\n약물치료는 가장 필수적인 치료이므로, 약물치료를 시작한다고 해서 아이가 심각한 상태라고 생각하거나, 약물치료는 최후의 방법이라는 선입견을 가질 필요는 없어요.\n\n약물치료 시 규칙적으로 정확하게 처방 받은 용량을 일정 기간 동안 꾸준히 복용해야 하며, 임의로 복용을 중단하지 않는다면 안전하고 효과적인 치료가 가능해요.\n\n약물의 부작용 사례를 알아보고, 꾸준하게 관리하고 싶다면 아이약 서비스를 이용해보세요.</string>

    <string name="num1">병력 조사 / 설문지 검사</string>
    <string name="num2">전문의 상담</string>
    <string name="num3">심리 검사</string>
    <string name="num4">발달과정 평가</string>
    <string name="num5">전산화 주의력 검사</string>
    <string name="num6">ADHD 진단</string>

    <string name="reference1">자가진단 및 분석 결과 출처</string>
    <string name="reference2">송파구 보건소, 국립나주병원, 명지병원</string>
    <string name="reference3">추천 정보 출처</string>
    <string name="reference4">대한소아청소년정신의학회</string>

    <string name="more">ADHD, 증상부터 치료까지\n알려드릴게요.</string>
    <string name="symptom">증상</string>
    <string name="heal">치료</string>
    <string name="other">기타</string>
    <string name="자가진단">자가진단</string>
    <string name="병원_진료_후기">병원 진료 후기</string>
    <string name="아이약">아이약</string>
    <string name="진료_후기">진료 후기</string>
    <string name="후기_작성">후기 작성</string>
    <string name="다른_사람들이_방문한_병원_후기">사람들이 추천하는\n병원을 한눈에!</string>
    <string name="방문한_병원_진료_후기_쓰기">방문한 병원\n진료 후기 쓰기</string>

    <string name="tiptitle1">우리 아이는 집중을 잘 하는데, ADHD일\n수 있나요?</string>
    <string name="tipdetail1">집중력이 높고 오래 유지되면 무조건 좋다고 생각하는 경향이 있지만, 하나에 집중했다가도 다른 자극이 들어오면 새로운 자극으로 집중을 전환할 수 있는 ‘주의전환’ 능력도 필요해요.\n\n그래야만 무언가에 집중하고 있더라도 갑자기 차가 다가올 때 피할 수 있고, 더 중요한 할 일이 생겼을 때 게임을 그만둘 수 있기 때문입니다.\n\nADHD의 핵심은 적절한 주의집중 조절 능력입니다. 즉, 적당히 유지할 수도 있으며 적절히 전환할 수도 있는가의 문제입니다. 실제로 ADHD로 진단된 아이 중 일부는 주의전환을 매우 어려워하므로, 집중력이 높다고 해서 ADHD일 가능성이 없는 것은 아닙니다.</string>
    <string name="tiptitle2">말썽을 피우고 여기저기 돌아다니기보단\n조용히 멍때리는 우리아이, ADHD일 수 있나요?</string>
    <string name="tipdetail2">ADHD는 주로 나타나는 증상에 따라 1) 주의력 결핍 유형, 2) 과잉행동・충동성 유형, 3) 혼합형의 세 가지 유형으로 분류합니다.\n\n이 중 주의력 결핍 유형의 아이들은 큰 소란을 일으키지 않고 산만한 모습을 보이진 않지만, 다른 사람의 이야기를 듣다가도 딴 생각을 하는 듯 멍해 보이는 경우가 많아요.</string>

    <string name="tiptitle3">약을 꼭 먹어야 하나요?</string>
    <string name="tipdetail3">ADHD의 치료 방법 중 약물치료는 가장 효과적인 방법으로 알려져 있어요. 식욕부진, 구역, 수면장애 등의 부작용이 나타날 가능성이 있지만, 적응기간이 지나면 이러한 반응은 대부분 사라지고, 약물 교체 또는 용량 조절을 통해 충분히 부작용을 극복하고 경감할 수 있습니다.\n\n그렇기 때문에 일상에 지장이 있다면 약을 먹는 것을 추천드립니다. </string>
    <string name="tiptitle4">약물치료를 한 번 시작하면 약을 평생 먹게\n 되는 거 아닌가요?</string>
    <string name="tipdetail4">약물치료가 진행되는 기간은 증상과 기능적인 문제가 남아있는 정도에 달려있습니다. 시간이 흐르며 증상이 완화되고 학업, 대인관계, 정서적인 문제가 나아진다면 약물치료를 중단해도 됩니다.\n</string>
    <string name="tiptitle5">우리 아이는 왜 ADHD가 된 건가요?</string>
    <string name="tipdetail5">ADHD는 뇌의 전두엽에서 주의 집중 능력을 조절하는 신경전달 물질이 불균형하여 발생하는 질환입니다.\n\n주의집중력과 행동을 통제하는 뇌 부위의 구조 및 기능 변화가 ADHD의 발생과 관련이 있습니다. 기타 원인으로는 뇌 손상, 뇌의 후천적 질병, 미숙아 등이 있습니다.</string>
    <string name="tiptitle6">아이에게 ADHD 진단을 알려야 하나요?</string>
    <string name="tipdetail6">진단명을 알려주는 것보다 더 중요한 것은 자녀의 연령과 발달 수준, 성향을 고려하여 진료를 받는 이유를 설명해주는 것입니다.\n\n정보 이해와 기억에 인지적 제한이 있는 미취학 아동은 질환에 대한 설명과 치료에 대한 이해가 어려우므로, 건강 상태를 확인하기 위해 병원에 가거나 튼튼해지기 위한 약을 복용한다고 설명하는 것도 좋아요.\n\n신체 구조와 기능을 간단하게 이해하지만 추상적인 사고는 어려운 초등학생 아동에겐 치료로 인해 기대 효과에 대해 간단히 이야기해주는 것을 추천드려요.</string>
    <string name="tiptitle7">아이의 ADHD를 어떻게 받아들여야 할까요?</string>
    <string name="tipdetail7">ADHD 증상으로 나타나는 독특한 말과 행동을 아이의 특성이라고 이해한 후, 그에 맞게 양육하고 훈육해야 합니다. 내 아이가 정상인지 아닌지 따지는 것보다, 아이의 특성을 고려하여 적절하게 발달할 수 있도록 도와주시는 것이 아이에게 큰 도움이 됩니다.\n\n또한 ADHD는 아이의 노력과 태도의 영역이 아님을 상기시켜야 합니다. ADHD는 뇌 발달의 문제이지 아이의 노력과 태도 문제로 인한 것이 아니기에, 아이를 탓하거나 아이에게 부정적 감정을 드러내지 않는 것이 좋습니다.\n\n마지막으로 아이의 장점에 집중해보세요. ADHD 아이들은 새로운 일에 쉽게 도전하기도 하고, 새로 만난 사람과 쉽게 친해지기도 합니다. 높은 창의성, 예술성을 보이기도 합니다.\n\nADHD 증상에 가려진 아이의 장점에 집중한다면 아이의 자존감에도 큰 도움이 되며 부모님도 ADHD를 받아들이기 한결 쉬워질 것입니다.</string>
    <string name="stroemessage">진단결과가 앨범에 저장 되었습니다.</string>
    <string name="dialogtitle">ADHD의 유형은 다음과 같이 나뉘어요.</string>

    <string name="type1">주의력 결핍형</string>
    <string name="type2">과잉행동∙충동형</string>
    <string name="type3">혼합형</string>
    <string name="hinttxt">병원 검색하기</string>

    <string name="typedetail1">과잉행동∙충동 점수 00점 이상</string>
    <string name="typedetail2">부주의 점수 00점 이상</string>
    <string name="typedetail3">부주의 점수, 과잉행동∙충동\n점수 각각 00점 이상</string>

    <string name="우리_아이_ADHD_빨리_알수록_좋으니까">우리 아이 ADHD,\n빨리 알수록 좋으니까</string>
    <string name="우리_아이_혹시_ADHD일까_">우리 아이, 혹시 ADHD일까?</string>
    <string name="ADHD_어디에서_진단받지">ADHD, 어디에서 진단받지?</string>
    <string name="ADHD_부작용_없이_치료할_수_있을까_">ADHD, 부작용 없이 치료할 수 있을까?</string>

    <string name="후기_작성을_위해서는_병원_방문내역_">후기 작성을 위해서는 병원 방문내역 인증이 필요합니다.</string>
    <string name="모든_리뷰는_비공개_익명_처리됩니다_">모든 리뷰는 비공개 익명 처리됩니다.</string>
    <string name="다음_중_한_가지를_업로드하세요_">다음 중 한 가지를 업로드하세요.\n반드시 병원명이 드러나야 합니다.</string>
    <string name="사진_업로드">사진 업로드</string>
    <string name="후기_작성하기">후기 작성하기</string>

    <string name="다음">다음</string>
    <string name="후기_작성을_종료하시겠습니까_">후기 작성을 종료하시겠습니까?</string>

    <string name="다음과_같은_내용이_많은_분들께_">다음과 같은 내용이 많은 분들께 도움이 될 거에요.</string>
    <string name="의사_선생님께_상세한_진단_설명을_받았나요_">의사 선생님께 상세한 진단 설명을 받았나요?\n진료 후 문제가 얼마나 개선되었나요?</string>

    <string name="주치의의_성함은_무엇인가요_">주치의의 성함은 무엇인가요?</string>
    <string name="진료_비용은_얼마였나요_">진료 비용은 얼마였나요?</string>
    <string name="받은_진료를_모두_선택해주세요_">받은 진료를 모두 선택해주세요.</string>
    
    <string name="주치의">주치의</string>
    <string name="진료비용">진료 비용</string>
    <string name="받은진료">받은 진료</string>

    <string name="CAT">CAT 검사</string>
    <string name="FULL_BATTERY">풀배터리 검사</string>
    <string name="EEG">정량 뇌파 검사</string>
    <string name="COUNSEL">상담</string>
    <string name="MEDICINE">약 처방</string>
    <string name="ETC">기타</string>


</resources>