<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAE0EC"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:textColor="@color/white"
        android:gravity="bottom"
        android:textSize="24sp"
        android:fontFamily="@font/pretendard_bold"
        android:paddingLeft="24dp"
        android:paddingBottom="24dp"
        android:background="@color/main_blue"
        android:text="@string/우리_아이_ADHD_빨리_알수록_좋으니까"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/우리_아이_혹시_ADHD일까_"
        android:textColor="#707885"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="34dp"
        android:textSize="20sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@drawable/bg_rad_20"
        android:backgroundTint="@color/white"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/자가진단"
            android:textColor="#353C49"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="약 5분, 18개 문항"
            android:layout_marginTop="8dp"
            android:textColor="#8D94A0"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:src="@drawable/home_1"
            android:layout_marginVertical="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_home_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/ADHD_어디에서_진단받지"
        android:textColor="#707885"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_hospital_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rad_20"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/white">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:drawablePadding="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/진료_후기"
                android:textColor="#353C49"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/다른_사람들이_방문한_병원_후기"
                android:layout_marginTop="8dp"
                android:textColor="#8D94A0"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_review_write"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rad_20"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:drawableRight="@drawable/ic_arrow_right"
                android:drawablePadding="24dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/후기_작성"
                android:textColor="#353C49"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/방문한_병원_진료_후기_쓰기"
                android:layout_marginTop="8dp"
                android:textColor="#8D94A0"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_home_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/ADHD_부작용_없이_치료할_수_있을까_"
        android:textColor="#707885"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_i"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@drawable/bg_rad_20"
        android:backgroundTint="@color/white"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/아이약"
            android:textColor="#353C49"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="약 정보 확인하고\n규칙적으로 관리하기"
            android:layout_marginTop="8dp"
            android:textColor="#8D94A0"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:src="@drawable/home_3"
            android:layout_marginVertical="14dp"
            android:layout_marginRight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>