<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MiniFragment"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="31dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="25dp"
            android:text="@string/dialogtitle"
            android:fontFamily="@font/pretendard_semibold"
            android:textSize="16sp"
            android:textColor="@color/resultscore"
            />

        <LinearLayout
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mostmany"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="24dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type1"
                android:textColor="@color/common"
                android:fontFamily="@font/pretendard_semibold"
                android:textSize="12sp"
                android:paddingTop="4dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="11dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/type1detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/type1"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="22dp"
            android:layout_marginTop="31dp"
            android:layout_marginLeft="18dp"
            android:text="@string/typedetail1"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/Tabunselected"
            android:textSize="12sp"
            />

        <LinearLayout
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mostmany"
            app:layout_constraintTop_toBottomOf="@id/type1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="24dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type2"
                android:textColor="@color/common"
                android:fontFamily="@font/pretendard_semibold"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:paddingBottom="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="6dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/type2detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/type2"
            app:layout_constraintTop_toBottomOf="@+id/type1detail"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="18dp"
            android:text="@string/typedetail2"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/Tabunselected"
            android:textSize="12sp"
            />

        <LinearLayout
            android:id="@+id/type3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mostmany"
            app:layout_constraintTop_toBottomOf="@id/type2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="24dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type3"
                android:textColor="@color/common"
                android:fontFamily="@font/pretendard_semibold"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:paddingBottom="4dp"
                android:paddingLeft="28dp"
                android:paddingRight="29dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/type3detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/type3"
            app:layout_constraintTop_toBottomOf="@+id/type2detail"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="18dp"
            android:text="@string/typedetail3"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/Tabunselected"
            android:layout_marginBottom="30dp"
            android:textSize="12sp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>