<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="#1A1E27"
        android:layout_marginTop="40dp"
        android:text="@string/후기_작성을_위해서는_병원_방문내역_"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="#8D94A0"
        android:layout_marginTop="20dp"
        android:text="@string/모든_리뷰는_비공개_익명_처리됩니다_"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_review_image_box"
        android:paddingVertical="28dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="136dp"
            android:src="@drawable/review_box_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:lineHeight="18dp"
            android:text="@string/다음_중_한_가지를_업로드하세요_"
            android:textColor="#8D94A0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rad_8"
            android:backgroundTint="@color/main_blue"
            android:paddingHorizontal="27dp"
            android:paddingVertical="13dp"
            android:text="@string/사진_업로드"
            android:textColor="@color/white"
            android:layout_marginTop="28dp"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rad_8"
        android:backgroundTint="#DAE0EC"
        android:paddingVertical="16dp"
        android:text="@string/후기_작성하기"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:textSize="18sp"
        android:fontFamily="@font/pretendard_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.appcompat.widget.LinearLayoutCompat>